# Can-Detector

./: README.md  pyproject.toml
latas_template_matching/: Detector.py  DetectorAguaHSV.py  DetectorObjetosOscuros.py  DetectorOscuroOtsu.py  DetectorOtsu.py  DetectorTemplate.py  __init__.py  entropy.py
